--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ chrono = "0.4.10"
 regex = "1.3.3"
 schemars = "0.7.0-alpha-1"
 
+[dev-dependencies]
+test-case = "0.3.3"
+
 [profile.release]
 panic = 'abort'
 lto = true
