--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ regex = "1.3.3"
 schemars = "0.7.0-alpha-1"
 derive_builder = "0.9.0"
 base64 = "0.11.0"
+rumq-client = "0.1.0-alpha.5"
+tokio = { version = "0.2", features = ["io-util", "tcp", "dns", "stream", "sync", "time"] }
 
 [dev-dependencies]
 test-case = "0.3.3"
